# sight-lang

./: .gitignore  .gitmodules  1.dou  1.rs  1.txt  Cargo.toml  README.md  TODO.md  a.c  build.rs  ideas.md  todo
docs/: index.html
dough-utils/: Cargo.toml
dough-utils/src/: syntax.rs
sight-macros/: Cargo.toml
sight-macros/src/: lib.rs
sight-utils/: Cargo.toml
sight-utils/src/: syntax.rs
src/: arena.rs  ast.rs  ast_tools.rs  ast_utils.rs  compat_serialize.rs  context.rs  lexer.rs  lib.rs  literal_value.rs  main.rs  parser.rs  span.rs  syntax.lalrpop  typing.rs  utils.rs  vocab.rs
src/ast/: context.rs  display.rs  id.rs  id_map.rs  mod.rs  span.rs  typed.rs  typed2.rs  visitor.rs
src/ast/raw/: mod.rs
src/ast/typed/: arena.rs  binding.rs  expr.rs  mod.rs  pattern.rs  stmt.rs  type.rs
src/backend/: mod.rs  python.rs
src/container/: mod.rs
src/container/arena/: arena.rs  mod.rs
src/container/interner/: interner.rs  mod.rs
src/container/multicontainer/: mod.rs
src/diag/: mod.rs
src/frontend/: mod.rs
src/parser/: context.rs  exprs.rs  mod.rs  name_stack.rs  patterns.rs  stmts.rs  term.rs  testing.rs  tests.rs  type_exprs.rs  types.rs  typing.rs
src/sema/: desugaring.rs  inference.rs  mod.rs  testing.rs  to_typed.rs  typing.rs
src/test/: arena.rs  mod.rs  parse.rs
src/testing/: into_tree_with_context.rs  mod.rs  tree.rs
src/utils/: interning.rs  mod.rs
