[package]
name = "dough-lang"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.22.1"
regex = "1.10"
dough-utils = { path = "dough-utils" }

[dependencies]
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.4.1"
xml-rs = "0.8.26"
