[package]
name = "sight-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10"
log = "0.4.27"
colog = "1.3.0"
sight-macros = { path = "sight-macros" }
function_name = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = "0.3"

[build-dependencies]
regex = "1.10"

[dev-dependencies]
pretty_assertions = "1.4.1"
xml-rs = "0.8.26"

[lib]
name = "sight_lang"
path = "src/lib.rs"

[[bin]]
name = "sight_lang_compiler"
path = "src/main.rs"